# Machine-Learning-in-Eczema-Detection-main

./: .gitignore  Build datasetv2.py  CITATION.cff  DATASETS.md  Hybrid-CNN+Transformer.py  README.md  Skin_Metadata.tab  best_vit_model.pt  build_dataset_v2.py  pyproject.toml  rebuild_dataset.py  requirements.txt  train.all.models.py
.github/workflows/: checks.yml
BaselineModels/: Basline-pretrainedmodel.py  Basline-pretrainedmodel_v2.py  Hybrid-CNN+Transformer.py  train.py  train_v2.py
configs/: dermacon.yaml  test_custom_resnet50.py
dermafair/: __init__.py
dermafair/data/: __init__.py  dermacon.py
dermafair/explainability/: __init__.py
dermafair/fairness/: __init__.py
dermafair/models/: __init__.py  custom_resnet50_pytorch.py  fusion_strategies.py  image_models.py  metadata_model.py  trainer.py
dermafair/utils/: __init__.py
dermafair/visualization/: __init__.py
docs/: GITHUB_SETUP.md  INTERPRETATION.md  references.bib
models/: Basline-pretrainedmodel.py  Hybrid-CNN+Transformer.py  Vision_Transformer_(ViT)_model.py  train (1).py
notebooks/: dermacon_example.ipynb
pdfs/: Basline-pretrainedmodel.py  CITATION.cff  Vision_Transformer_(ViT)_model.py
phase0-personalmodel/: Eczema_CNN.py
scripts/: prepare_data.py  run_fairness.py  train_all.py
tests/: test_fairness.py
