[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dermafair"
version = "0.1.0"
description = "Fitzpatrick-stratified fairness evaluation for multimodal dermatology AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ethan" }]
keywords = ["fairness", "dermatology", "deep-learning", "multimodal", "skin-tone"]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=0.9.12",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "grad-cam>=1.5.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "imagehash>=4.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["dermafair*"]

[tool.ruff]
line-length = 100
